--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles/index.css">
     <script src="//upcdn.b0.upaiyun.com/libs/jquery/jquery-1.10.0.min.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="/scripts/jquery.mixitup.min.js"></script>
-    <script src="/scripts/index.js"></script>
+    <script src="scripts/jquery.mixitup.min.js"></script>
+    <script src="scripts/index.js"></script>
 </head>
 
 <body>
